[gd_scene load_steps=3 format=3 uid="uid://dp7bx0rrf4de8"]

[ext_resource type="Script" path="res://canvas_layer.gd" id="1_2x2tw"]

[sub_resource type="CanvasTexture" id="CanvasTexture_0chcv"]

[node name="CanvasLayer1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TEMP_LABEl" type="Label" parent="."]
layout_mode = 0
offset_left = 417.0
offset_top = 203.0
offset_right = 590.0
offset_bottom = 316.0
text = "TEST LABEl
"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_2x2tw")

[node name="GenerateButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = 62.0
offset_right = 77.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Клик"
icon = SubResource("CanvasTexture_0chcv")
metadata/_edit_use_anchors_ = true

[node name="ResultLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 55.0
offset_top = -145.0
offset_right = 293.0
offset_bottom = -37.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
offset_left = 55.0
offset_top = 29.0
offset_right = 83.0
offset_bottom = 160.0

[node name="PlatinumOreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "1"

[node name="StoneLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "1"

[node name="IronOreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "1"

[node name="SilverOreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "1"

[node name="GoldOreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "1"
